--- a/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ng-refresher/src/app/persons/person-input.component.html
+++ b/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ng-refresher/src/app/persons/person-input.component.html
@@ -1,3 +1,3 @@
 <label for="name">Name</label>
 <input type="text" id="name" />
-<button>Create</button>
+<button (click)="onCreatePerson()">Create</button>
