--- a/udemy/Ionic-Build_iOS_Android_&_Web_Apps_with_Ionic_&_Angular/ionic-angular-course/ionic-angular-course-place-booking/src/app/bookings/bookings.page.html
+++ b/udemy/Ionic-Build_iOS_Android_&_Web_Apps_with_Ionic_&_Angular/ionic-angular-course/ionic-angular-course-place-booking/src/app/bookings/bookings.page.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>bookings</ion-title>
+    <ion-title>bookings!</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
